fix horizontal scroll for other browsers

--- a/public/main.css
+++ b/public/main.css
@@ -15,7 +15,7 @@ Remove all horizontal scrolling, and scrollbars
 */
 body::-webkit-scrollbar {
     display: none; /* Hide scrollbar for Chrome, Safari and Opera */
-    overflow-x: none;
+    overflow-x: hidden;
 }
 
 body {
@@ -26,6 +26,7 @@ body {
 
 html {
     scrollbar-width: none; /* Firefox */
+    overflow-x: hidden;
 }
 
 /*
